processed/gerrit/txt/62054.txt
Change:     62054
Subject:    LU-19523 ldiskfs: fix format errors on RHEL8 aarch64
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/62054
Change-Id:  Ie5c19df8c12fd90380da84bfae781bbe5cbb3ee4
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Alex Deiter
Created:    2025-10-27 10:29:29.000000000
Updated:    2025-11-25 00:47:15.000000000
Patch Set:  8
Insertions: +22
Deletions:  -22
Comments:   6 (0 unresolved)

--- Labels ---
  Code-Review: Arshad Hussain: +1; Oleg Drokin: +2; Jian Yu: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  CC: Andreas Dilger
  REVIEWER: Oleg Drokin, Jian Yu, Minh Diep, Arshad Hussain

--- Commit Message ---
LU-19523 ldiskfs: fix format errors on RHEL8 aarch64

This patch fixes build errors on RHEL8 aarch64:
ldiskfs/mballoc.c: In function ‘ldiskfs_seq_mb_stats_show’:
ldiskfs/mballoc.c:3091:32: error: format ‘%llu’ expects argument of type
‘long long unsigned int’, but argument 3 has type ‘long int’ [-Werror=format=]
  seq_printf(seq, "\t\thits: %llu\n", atomic64_read(&sbi->s_bal_cX_hits[0]));
                             ~~~^
                             %lu

Test-Parameters: trivial
Fixes: 1534c43ccb ("LU-14438 ldiskfs: backport ldiskfs mballoc patches")
Change-Id: Ie5c19df8c12fd90380da84bfae781bbe5cbb3ee4
Signed-off-by: Alex Deiter <adeiter@ddn.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62054
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Tested-by: jenkins <devops@whamcloud.com>

--- Review History ---

--- Message (Alex Deiter, 2025-10-27 10:29:29.000000000) ---
Uploaded patch set 1.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-10-27 10:32:14.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2025-10-27 10:43:49.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2025-10-27 11:11:57.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/117937/ : SUCCESS

--- Message (Arshad Hussain, 2025-10-27 12:32:23.000000000) ---
Patch Set 1: Code-Review+1

(1 comment)

--- Message (Alex Deiter, 2025-10-27 12:45:38.000000000) ---
Uploaded patch set 2: Commit message was updated.

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE** OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (Alex Deiter, 2025-10-27 12:47:00.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-10-27 12:48:45.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2025-10-27 13:00:18.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2025-10-27 13:15:36.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/117938/ : SUCCESS

--- Message (Autotest, 2025-10-27 13:16:19.000000000) ---
Patch Set 1:

Trevis Autotest is abandoning the following sessions because: later build 117938 found
- Enforced review-ldiskfs-dne on el8.10-x86_64/ldiskfs servers and clients

--- Message (Alex Deiter, 2025-10-27 13:30:46.000000000) ---
Uploaded patch set 3: Commit message was updated.

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE** OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-10-27 13:33:39.000000000) ---
Patch Set 3:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2025-10-27 13:46:52.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (jenkins, 2025-10-27 14:20:13.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/117939/ : SUCCESS

--- Message (Alex Deiter, 2025-10-28 18:22:00.000000000) ---
Uploaded patch set 4: Commit message was updated.

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE** OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-10-28 18:24:51.000000000) ---
Patch Set 4:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2025-10-28 18:29:39.000000000) ---
Patch Set 4:

Looks good to me.

--- Message (jenkins, 2025-10-28 18:53:28.000000000) ---
Patch Set 4: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/117983/ : SUCCESS

--- Message (Alex Deiter, 2025-10-28 20:26:09.000000000) ---
Uploaded patch set 5: Commit message was updated.

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE** OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-10-28 20:28:58.000000000) ---
Patch Set 5:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2025-10-28 20:32:41.000000000) ---
Patch Set 5:

Looks good to me.

--- Message (jenkins, 2025-10-28 21:09:52.000000000) ---
Patch Set 5: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/117992/ : SUCCESS

--- Message (Autotest, 2025-10-28 21:10:57.000000000) ---
Patch Set 4:

Trevis Autotest is abandoning the following sessions because: later build 117992 found
- Enforced review-ldiskfs-dne on el8.10-x86_64/ldiskfs servers and clients

--- Message (Alex Deiter, 2025-10-28 21:19:06.000000000) ---
Uploaded patch set 6: Commit message was updated.

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE** OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-10-28 21:22:01.000000000) ---
Patch Set 6:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2025-10-28 21:34:18.000000000) ---
Patch Set 6:

Looks good to me.

--- Message (jenkins, 2025-10-28 21:49:51.000000000) ---
Patch Set 6: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/117993/ : SUCCESS

--- Message (Autotest, 2025-10-28 21:50:11.000000000) ---
Patch Set 5:

Trevis Autotest is abandoning the following sessions because: later build 117993 found
- Enforced review-ldiskfs-dne on el8.10-x86_64/ldiskfs servers and clients

--- Message (Alex Deiter, 2025-10-29 17:09:04.000000000) ---
Uploaded patch set 7: Commit message was updated.

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE** OR changekind:TRIVIAL_REBASE OR is:MIN")
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR **changekind:NO_CODE_CHANGE**")

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-10-29 17:11:49.000000000) ---
Patch Set 7:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2025-10-29 17:12:19.000000000) ---
Patch Set 7:

Looks good to me.

--- Message (jenkins, 2025-10-29 19:24:12.000000000) ---
Patch Set 7: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/118032/ : SUCCESS

--- Message (Jian Yu, 2025-10-30 15:44:30.000000000) ---
Patch Set 7: Code-Review+1

--- Message (Andreas Dilger, 2025-11-05 06:24:32.000000000) ---
Patch Set 7:

(1 comment)

--- Message (Oleg Drokin, 2025-11-14 02:11:00.000000000) ---
Patch Set 7: Code-Review+2

--- Message (Oleg Drokin, 2025-11-25 00:47:15.000000000) ---
Change has been successfully cherry-picked as 6504c861b168daf1e708158f1319957eb726fdb4
